--- a/index.html
+++ b/index.html
@@ -6,7 +6,35 @@
     <link rel="stylesheet" type="text/css" href="./css/styles.css" />
   </head>
   <body>
-    
+    <div id="container">
+      <header>
+        <h1>Bus Mall</h1>
+      </header>
+      <div class="product" id="product_1">
+        Image 1
+      </div>
+      <div class="product" id="product_2">
+        image 2
+      </div>
+      <div class="product" id="product_3"> 
+        image 3
+      </div>
+      <div id="results"> 
+        <h3>Results:</h3>
+        <ol>
+          <li>res</li>
+          <li>res</li>
+          <li>res</li>
+          <li>res</li>
+          <li>res</li>
+          <li>res</li>
+          <li>res</li>
+          <li>res</li>
+          <li>res</li>
+        </ol>
+      </div>
+    </div>
+
     <script src="./js/app.js"></script>
   </body>
 </html>
