--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Bus Mall</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="./css/reset.css" />
     <link rel="stylesheet" type="text/css" href="./css/styles.css" />
   </head>
   <body>
