Render bar graph that represents data to DOM

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
         <ol id="dataList">
         </ol>
       </div>
+      <div id="graph">
+      </div>
     </div>
-
     <script src="./js/app.js"></script>
   </body>
 </html>
